# laba3

./: CMakeLists.txt
include/: Figure.h  Rectangle.h  Square.h  Triangle.h
src/: Figure.cpp  Rectangle.cpp  Square.cpp  Triangle.cpp  main.cpp
